<resources>
    <string name="app_name">Restiloc</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Title -->
    <string name="title_planning">Planning</string>
    <string name="title_setting">Settings</string>
    <string name="title_stat">Statistiques</string>
    <string name="title_welcome">Welcome in Restiloc !</string>

    <!-- Subtitle -->
    <string name="description">Description</string>
    <string name="insurance">Assurance</string>
    <string name="informations">Les informations détaillées</string>
    <string name="landing_description">L\'application qui vous permettra d\'effectuer vos expertises.</string>


    <string name="meetings">Vos prochains rendez-vous</string>
    <string name="statistiques">Les statistiques</string>
    <string name="stats_between_dates">Statistiques entre deux dates</string>
    <string name="icone_de_fichier">icone de fichier</string>
    <string name="close_button">close button</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="date_de_l_intervention">Date de l\'intervention</string>
    <string name="random_date">Horaire Random</string>
    <string name="horaire">Horaire</string>
    <string name="modele">Modèle</string>
    <string name="random_modele">Random Modèle</string>
    <string name="immatriculation">Immatriculation</string>
    <string name="type_de_rdv">Type de RDV</string>
    <string name="random_type">Random Type</string>
    <string name="random_immatriculation">Immatriculation</string>
    <string name="marque">Marque</string>
    <string name="random_marque">Random Marque</string>
    <string name="couleur_de_la_voiture">Couleur</string>
    <string name="random_couleur">Random Couleur</string>

    <!-- Insurance informations -->
    <string name="insurance_infos">Informations Assurance</string>
    <string name="name_insurance_car">Nom</string>
    <string name="random_name_insurance_car">Random Name</string>
    <string name="adress_insurance_car">Adresse</string>
    <string name="random_adress_insurance_car">Random Adresse</string>
    <string name="city_insurance_car">Ville</string>
    <string name="random_city_insurance_car">Random Ville</string>
    <string name="number_insurance_car">Téléphone</string>
    <string name="random_number_insurance_car">Random Téléphone</string>
    <string name="expertiser_ce_vehicule">Expertiser ce vehicule</string>
    <string name="plan">Plan</string>
    <string name="login">Login</string>
    <string name="logout">Se déconnecter</string>

    <string name="choose_date">Choisir la date</string>
    <string name="get_stats">Obtenir les stats</string>
    <string name="date_start">Date de début</string>
    <string name="date_end">Date de fin</string>

    <string name="save">Enregistrer</string>


</resources>