<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/icone_de_fichier"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_folder_24"
            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/pop_up_meeting_detail_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_height="wrap_content"
        android:text="@string/meeting_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />


    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:contentDescription="@string/close_button"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        tools:ignore="RedundantDescriptionCheck" />


    <TextView
        android:id="@+id/pop_up_date"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horaire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/pop_up_date_detail"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_date"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_date"
        app:layout_constraintTop_toTopOf="@+id/pop_up_date" />

    <TextView
        android:id="@+id/pop_up_type"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_de_rdv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_date_detail" />

    <TextView
        android:id="@+id/pop_up_type_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_type"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_type" />


    <TextView
        android:id="@+id/pop_up_immatriculation"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immatriculation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_type_detail" />

    <TextView
        android:id="@+id/pop_up_immatriculation_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_immatriculation"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_immatriculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_immatriculation"  />

    <TextView
        android:id="@+id/pop_up_model"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modele"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_immatriculation_detail" />

    <TextView
        android:id="@+id/pop_up_model_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_modele"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_model"  />

    <TextView
        android:id="@+id/pop_up_marque"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_model_detail" />

    <TextView
        android:id="@+id/pop_up_marque_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_marque"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_marque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_marque"  />

    <TextView
        android:id="@+id/pop_up_car_color"
        style="@style/SubtitleTextStyle2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/couleur_de_la_voiture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_marque_detail" />

    <TextView
        android:id="@+id/pop_up_car_color_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_couleur"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_car_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_car_color"  />

    <TextView
        android:id="@+id/pop_up_car_info_insurance"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/insurance_infos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_color_detail" />

    <TextView
        android:id="@+id/pop_up_car_name_insurance"
        style="@style/SubtitleTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/name_insurance_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_info_insurance" />

    <TextView
        android:id="@+id/pop_up_car_name_insurance_detail"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="2dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_name_insurance_car"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_car_name_insurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_car_name_insurance"  />

    <TextView
        android:id="@+id/pop_up_car_adress_insurance"
        style="@style/SubtitleTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/adress_insurance_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_name_insurance_detail" />

    <TextView
        android:id="@+id/pop_up_car_adress_insurance_detail"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/random_adress_insurance_car"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_car_adress_insurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_car_adress_insurance" />


    <TextView
        android:id="@+id/pop_up_car_city_insurance"
        style="@style/SubtitleTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/city_insurance_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_adress_insurance_detail" />

    <TextView
        android:id="@+id/pop_up_car_city_insurance_detail"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/random_city_insurance_car"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_car_city_insurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_car_city_insurance" />

    <TextView
        android:id="@+id/pop_up_car_number_insurance"
        style="@style/SubtitleTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/number_insurance_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_city_insurance_detail" />

    <TextView
        android:id="@+id/pop_up_car_number_insurance_detail"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/random_number_insurance_car"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_car_number_insurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pop_up_car_number_insurance" />

    <Button
        android:id="@+id/button"
        style="@style/PopupButtonStyle"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_round"
        android:text="@string/expertiser_ce_vehicule"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_car_number_insurance" />



    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:liteMode="true"
        />

    <Button
        android:id="@+id/buttonUnavaibility"
        style="@style/PopupButtonStyle"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_round"
        android:text="vehicule indisponible"
        android:layout_marginTop="30dp"

        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_view" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_view" />

    <Button
        android:id="@+id/buttonCloseMission"
        style="@style/PopupButtonStyle"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_round"
        android:text="Cloturer la mission"
        android:layout_marginTop="30dp"

        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/map_view" />

</androidx.constraintlayout.widget.ConstraintLayout>