<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.statistiques.StatistiquesFragment">

    <TextView
        android:id="@+id/textStatistiques"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/statistiques"/>

    <TextView
        android:id="@+id/textStatsBetween"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/stats_between_dates"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_gravity="start|left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateOne"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:text="@string/date"
            android:textAlignment="center"
          />

        <Button
            android:id="@+id/firstDatePickerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:text="@string/choose_date" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_gravity="end|right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTwo"
                style="@style/DefaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="50dp"
                android:text="@string/date"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/secondDatePickerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:text="@string/choose_date" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/getStatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/get_stats" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertical_recycler_view_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_horizontal_stats">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>